fixed text align for team members

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -57,6 +57,16 @@ h4 {
   font-family: "Poppins", sans-medium;
   padding: 30px 30px; }
 
+.meet_our_team_des p {
+  margin: 0;
+  padding: 0;
+  text-align: left; }
+
+.memberDescription p {
+  padding: 0;
+  margin: 0;
+  text-align: left; }
+
 body {
   background-color: #f9f9f9;
   margin: 0 10px;
@@ -178,18 +188,14 @@ nav a:hover {
 
 .members {
   display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: repeat(2, 1fr);
-  row-gap: 30px;
-  column-gap: 30px;
-  margin-top: 300px;
-  margin-left: 30px; }
+  grid-template-columns: 1fr 1fr;
+  padding: 0;
+  width: min-content; }
 
-.memberDescription h3 {
-  margin-left: 300px; }
-
-.memberDescription p {
-  width: 200px; }
+.member1 {
+  display: grid;
+  width: min-content;
+  grid-template-columns: 1fr 1fr; }
 
 nav img {
   width: 150px;
