--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -75,3 +75,19 @@ h4 {
     padding: 30px 30px;
 }
 
+.meet_our_team_des {
+    p {
+        margin: 0;
+        padding: 0;
+        text-align: left;
+    }
+}
+
+.memberDescription {
+    p {
+        padding: 0;
+        margin: 0;
+        text-align: left;
+    }
+}
+
