--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -148,20 +148,15 @@ nav a:hover {
 //meet the team
 .members {
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: repeat(2,1fr);
-    row-gap: 30px;
-    column-gap: 30px;
-    margin-top: 300px;
-    margin-left: 30px;
+    grid-template-columns: 1fr 1fr;
+    padding: 0;
+    width: min-content;
 }
 
-.memberDescription h3{
-    margin-left: 300px;
-}
-
-.memberDescription p{
-    width: 200px;
+.member1 {
+display: grid;
+width: min-content;
+grid-template-columns: 1fr 1fr;
 }
 
 
